// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberField applies theming 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 8%, 55%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 16,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          Array [
            Object {},
            undefined,
          ],
        ]
      }
      testID="phoneNumberInput"
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 8%, 55%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 16,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          Array [
            Object {},
            undefined,
          ],
        ]
      }
      testID="phoneNumberInput"
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected when disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 8%, 55%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "opacity": 0.6,
        "padding": 16,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={false}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          Array [
            Object {},
            undefined,
          ],
        ]
      }
      testID="phoneNumberInput"
    />
  </View>
</View>
`;
